compiler/testData/diagnostics/tests/dataClasses/innerOuterDataClass.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
<!WRONG_MODIFIER_CONTAINING_DECLARATION!>inner<!> <!INCOMPATIBLE_MODIFIERS!>data<!> class Outer(val x: Int)